@@ -1,44 +1,52 @@
 package com.hcltech;
 
-import com.hcltech.model.Order;
-import com.hcltech.model.Product;
-import com.hcltech.model.Profile;
-import com.hcltech.model.User;
+import com.hcltech.model.*;
 import com.hcltech.util.dbUtil;
 import jakarta.persistence.EntityManager;
-import jakarta.persistence.EntityManagerFactory;
+import jakarta.persistence.EntityTransaction;
 
 import java.util.Arrays;
-import java.util.List;
 
-//TIP To <b>Run</b> code, press <shortcut actionId="Run"/> or
-// click the <icon src="AllIcons.Actions.Execute"/> icon in the gutter.
 public class Main {
     public static void main(String[] args) {
+        EntityManager em = dbUtil.getEntityManagerFactory().createEntityManager();
+        EntityTransaction transaction = em.getTransaction();
 
-        //===========================================================
-        EntityManager entityManager = dbUtil.getEntityManagerFactory().createEntityManager();
-        entityManager.getTransaction().begin();
-        //===========================================================
+        try {
+            transaction.begin();
 
-        Profile profile = new Profile("Luffy@c.c","3724983274");
-        User user = new User("Luffy", profile);
+            // Create Profile
+            Profile profile = new Profile();
+            profile.setEmail("john.doe@example.com");
+            profile.setMobile("9876543210");
 
-        Product product1 = new Product("Apple",40.0);
-        Product product2 = new Product("Strawberry", 90.0);
-        Order order = new Order("First Order");
-        order.setProductList(Arrays.asList(product1,product2));
+            // Create Products
+            Product product1 = new Product("Laptop", 75000.0);
+            Product product2 = new Product("Mouse", 1500.0);
 
-        user.setOrders(List.of(order));
-        entityManager.persist(profile);
-        entityManager.persist(user);
+            // Create Order with Products
+            Order order1 = new Order("Electronics Purchase");
+            order1.setProductList(Arrays.asList(product1, product2));
 
-        entityManager.getTransaction().commit();
-        entityManager.clear();
+            // Create User with Profile and Order
+            User user = new User("John Doe", profile);
+            order1.setUser(user); // Set bidirectional relationship
+            user.setOrders(Arrays.asList(order1));
 
-        User fetched = entityManager.find(User.class, user.getId());
-        System.out.println("USER FETCHED BY FIND ID :"+ fetched );
-        entityManager.close();
+            // Persist the user (cascade will persist profile and orders, products)
+            em.persist(user);
 
+            transaction.commit();
+
+            System.out.println("User and related entities saved successfully!");
+        } catch (Exception e) {
+            if (transaction.isActive()) {
+                transaction.rollback();
+            }
+            e.printStackTrace();
+        } finally {
+            em.close();
+            dbUtil.closeEntityManagerFactory();
+        }
     }
 }
